--- a/app/globals.scss
+++ b/app/globals.scss
@@ -26,12 +26,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(180deg, #fcfcfc 0%, #f7cdc7 100%);
 }
 
 
