button variation changes

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -13,6 +13,9 @@
   .white-gradient {
     background: linear-gradient(240deg, rgb(255, 255, 255)  0%, rgb(236, 236, 236) 100%);
   }
+  .red-gradient {
+    background: linear-gradient(120deg, #e9e7e7, rgb(224, 131, 131), black)
+  }
 }
 
 @media (prefers-color-scheme: dark) {
