--- a/app/globals.scss
+++ b/app/globals.scss
@@ -14,7 +14,7 @@
     background: linear-gradient(240deg, rgb(255, 255, 255)  0%, rgb(236, 236, 236) 100%);
   }
   .red-gradient {
-    background: linear-gradient(120deg, #e9e7e7, rgb(224, 131, 131), black)
+    background: linear-gradient(140deg, #e9e7e7, rgb(240, 195, 195))
   }
 }
 
